--- a/web/test/view/event_test.html
+++ b/web/test/view/event_test.html
@@ -5,11 +5,35 @@
 <meta charset="UTF-8">
 <title>자바스크립트 이벤트</title>
 <script type="text/javascript" src="../js/event_test.js"></script>
-<script type="text/javascript"></script>
+<script type="text/javascript">
+	function showDocument(){
+		console.log("title : " + document.title);
+		console.log("lastModified" + document.lastModified);
+		console.log("location" +document.location);
+		console.log("referrer"+ document.referrer);
+		console.log("bgColor" + document.bgColor);
+		console.log("fgColor" + document.fgColor);
+		console.log("linkColor"  + document.linkColor);
+		console.log("alinkColor" + document.alinkColor);
+		console.log("vlinkColor"+ document.vlinkColor);
+		console.log("anchors"+ document.anchors);
+		console.log("forms" + document.forms);
+		console.log("links" + document.links);
+		console.log("images" + document.images);
+		console.log("applets" + document.applets);
+		console.log("embeds" + document.embeds);
+		document.write(navigator.appName)
+		document.write(navigator.appVersion)
+		document.write(navigator.appCodeName)
+		document.write(navigator.userAgent)
+		document.write( navigator.appName + " " + navigator.appVersion)
+		
+	}
+</script>
 </head>
 <body>
 	<h1>자바스크립트 이벤트와 핸들러 테스트</h1>
-	<button id="button">클릭 이벤트 구동 확인</button>
+	<button id="btn">클릭 이벤트 구동 확인</button><p>
 	<hr>
 	<select id="nation">
 		<option value="">번호를 선택하세요.</option>
@@ -22,7 +46,21 @@
 		<li>Korea</li>
 		<li>Japan</li>
 		<li>China</li>
-		<li>Betnam</li> 
+		<li>Betnam</li>
 	</ul>
+	<p>
+	<hr>
+	<button onclick="window.location.href='http://www.daum.net';">다음으로 이동</button>
+	<p>
+	<hr>
+	<button onclick="showDocument();">document 정보 확인</button>
+
 </body>
 </html>
+
+
+
+
+
+
+
